[package]
name = "rpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "*"
clap = { version = "4.0", features = ["derive"] }
notify = "5.0.0"
daemonize = "0.4.1"
libc = "0.2.137"
cfg-if = "1.0.0"
env_logger = "0.10.0"
log4rs = "1.2.0"
log = "0.4.17"
rlua = "0.19.4"

